@startuml
folder Model {
  User "1" *-- "0..*" Work
  User "1" *-- "0..*" Stage
  Work *-- Page
  Stage *-- Page

  class User {
    users
    user
    name : String
    email : String
    password : String
  }

  class Work {
    works
    work
    title : String
    memo : String
    print_company : String
    due_time : DateTime
    target_day : Date
    total_page : Integer
  }

  class Stage {
    stages
    stage
    name : String
  }

  class Page {
    status : Integer
    matter : Boolean
  }

}

folder Controller {
  class UsersController {
    +index()
    +new()
    +show()
    +edit()
    +update()
  }

  class WorksController {
    +index()
    +new()
    +show()
    +edit()
    +update()
    +destroy()
  }

  class StagesController {
    +index()
    +new()
    +show()
    +edit()
    +update()
    +destroy()
  }

  class PagesController {
    +index()
    +new()
    +show()
    +edit()
    +update()
    +destroy()
  }
}

@enduml
